off center icon fixed

--- a/newtheme.css
+++ b/newtheme.css
@@ -119,8 +119,8 @@ cursor: url(https://raw.githubusercontent.com/teypen/peatuN-MAL-Design/main/imag
 
 .header .header-menu .list-menu .icon-menu svg.icon {
 	position: fixed;
-	top:412px;
-	left:14px;
+	top:413px;
+	left:15px;
 	max-width: 30px;
 	max-height: 30px;
 	fill: #FFFFFF;
